--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -32,6 +32,10 @@
         color: #fff;
         text-decoration: none;
       }
+      .semi {
+        color: rgba(0,0,0,0.5); /* Полупрозрачный цвет */
+        font-size: 14px;
+       }
     </style>
     <title>
       {% block title %}
