--- a/yatube/templates/posts/includes/switcher.html
+++ b/yatube/templates/posts/includes/switcher.html
@@ -1,6 +1,6 @@
 {% if user.is_authenticated %}
 {% with request.resolver_match.view_name as view_name %}
-  <div class="row my-3">
+  <div class="row my-3 container">
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a 
