--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -52,7 +52,7 @@
           </p>
         </div>
       </div>
-      {% include 'includes/add_comment.html' %}
+      {% include 'posts/includes/add_comment.html' %}
     </article>
   </div>
 {% endblock %}
