--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,53 +4,51 @@
   Профайл пользователя {{ author }}
 {% endblock %}
 {% block content %}
-  <h1>Все посты пользователя {{ author }} </h1>
-  <p>Всего постов: {{ author.author_posts.count }} </p>
-  <p>Число подписчиков: {{ author.following.count }}</p>
-  <p>Подписан на количество авторов: {{ author.follower.count }}</p>
-  {% if author != request.user %}
-    {% if following %}
-      <a
-      class="btn btn-outline-danger btn-lg" type="button"
-        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-      >
-        Отписаться
-      </a>
-    {% else %}
-        <a
-        class="btn btn-outline-danger btn-lg" type="button"
-          href="{% url 'posts:profile_follow' author.username %}" role="button"
-        >
-          Подписаться
-        </a>
-    {% endif %}
-  {% endif %}
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      
+      <h1>Все посты пользователя {{ author }} </h1>
+    </li>
+    <li class="list-group-item">
+      <p><svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M11.84 2H8.16c-.93 0-1.67 0-2.26.05-.62.05-1.15.15-1.63.4a4.15 4.15 0 0 0-1.82 1.82 4.26 4.26 0 0 0-.4 1.63C2 6.5 2 7.23 2 8.16v3.68c0 .93 0 1.67.05 2.26.05.62.15 1.15.4 1.63.4.78 1.04 1.42 1.82 1.82.48.25 1.01.35 1.63.4.6.05 1.33.05 2.26.05h3.68c.93 0 1.67 0 2.26-.05a4.26 4.26 0 0 0 1.63-.4 4.15 4.15 0 0 0 1.82-1.82c.25-.48.35-1.01.4-1.63.05-.6.05-1.33.05-2.26V8.16c0-.93 0-1.67-.05-2.26a4.26 4.26 0 0 0-.4-1.63 4.15 4.15 0 0 0-1.82-1.82 4.26 4.26 0 0 0-1.63-.4C13.5 2 12.77 2 11.84 2zm-6.9 1.79c.25-.12.56-.2 1.08-.25.53-.04 1.2-.04 2.17-.04h3.62c.96 0 1.64 0 2.17.04.52.05.83.13 1.07.25.5.25.9.66 1.16 1.16.12.24.2.55.25 1.07l.02.48H3.52l.02-.48c.05-.52.13-.83.25-1.07.25-.5.66-.9 1.16-1.16zM3.5 8v3.81c0 .96 0 1.64.04 2.17.05.52.13.83.25 1.07.25.5.66.9 1.16 1.16.24.12.55.2 1.07.25.53.04 1.2.04 2.17.04h3.62c.96 0 1.64 0 2.17-.04a2.8 2.8 0 0 0 1.07-.25c.5-.25.9-.66 1.16-1.16.12-.24.2-.55.25-1.07.04-.53.04-1.2.04-2.17V8z" fill="currentColor" fill-rule="evenodd"></path></svg>
+        Всего постов: {{ author.author_posts.count }} </p>
+    </li>
+    <li class="list-group-item">
+      <p>
+        <svg fill="none" height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="M10 7.75a1.25 1.25 0 1 1 0-2.5 1.25 1.25 0 0 1 0 2.5zM7.25 6.5a2.75 2.75 0 1 1 5.5 0 2.75 2.75 0 0 1-5.5 0zm-.5 7.25c0-.42.23-.83.8-1.17A4.81 4.81 0 0 1 10 12c1.03 0 1.88.23 2.45.58.57.34.8.75.8 1.17 0 .3-.1.44-.22.54-.14.11-.4.21-.78.21h-4.5c-.39 0-.64-.1-.78-.21-.12-.1-.22-.25-.22-.54zM10 10.5c-1.22 0-2.37.27-3.23.8-.88.53-1.52 1.37-1.52 2.45 0 .7.28 1.3.78 1.71.48.39 1.1.54 1.72.54h4.5c.61 0 1.24-.15 1.72-.54.5-.4.78-1 .78-1.71 0-1.08-.64-1.92-1.52-2.45-.86-.53-2-.8-3.23-.8zm4-5.59c.06-.4.44-.7.85-.64a2.5 2.5 0 0 1-.35 4.98.75.75 0 0 1 0-1.5 1 1 0 0 0 .14-1.99.75.75 0 0 1-.63-.85zM15.76 10a.75.75 0 0 0 0 1.5c1.16 0 1.75.67 1.75 1.25 0 .22-.07.41-.19.55-.1.12-.24.2-.46.2a.75.75 0 0 0 0 1.5c1.43 0 2.15-1.21 2.15-2.25 0-1.71-1.6-2.75-3.25-2.75zM5 10.75a.75.75 0 0 0-.75-.75C2.61 10 1 11.04 1 12.75 1 13.79 1.72 15 3.15 15a.75.75 0 0 0 0-1.5.57.57 0 0 1-.47-.2.86.86 0 0 1-.18-.55c0-.58.6-1.25 1.75-1.25.41 0 .75-.34.75-.75zm.14-6.47a.75.75 0 0 1 .22 1.48 1 1 0 0 0 .14 1.99.75.75 0 1 1 0 1.5 2.5 2.5 0 0 1-.36-4.97z" fill="currentColor" fill-rule="evenodd"></path></svg>
+        Число подписчиков: {{ author.following.count }}</p>
+    </li>
+    <li class="list-group-item">
+      <p>
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M7.2 1.5a.85.85 0 0 1 .9.8l.25 3.8a.85.85 0 0 1-1.7.1L6.4 2.4a.85.85 0 0 1 .8-.9Zm5.89.18a.85.85 0 0 1 .58 1.06l-1.35 4.65a.85.85 0 0 1-1.64-.48l1.35-4.65a.85.85 0 0 1 1.06-.58Zm.59 7.08a.75.75 0 0 1 1.05-.08 5.14 5.14 0 0 1 1.77 4.07c0 2.68-2.3 5.75-6.5 5.75-3.12 0-6.5-2.22-6.5-5.75 0-.68.21-1.59.77-2.35C4.85 9.6 5.8 9 7.14 9c.39 0 1.9.13 2.79 1.91a.75.75 0 1 1-1.35.68c-.53-1.08-1.35-1.09-1.44-1.09-.83 0-1.34.35-1.66.79A2.62 2.62 0 0 0 5 12.75C5 15.18 7.4 17 10 17c3.36 0 5-2.4 5-4.25 0-.95-.22-2.06-1.24-2.93a.75.75 0 0 1-.08-1.06Z" clip-rule="evenodd"></path></svg>
+        Подписан на количество авторов: {{ author.follower.count }}</p>
+    </li>
+    <li class="list-group-item">
+      {% if author != request.user %}
+        {% if following %}
+          <a
+          class="btn btn-outline-danger btn-lg" type="button"
+            href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+          >
+            Отписаться
+          </a>
+        {% else %}
+            <a
+            class="btn btn-outline-danger btn-lg" type="button"
+              href="{% url 'posts:profile_follow' author.username %}" role="button"
+            >
+              Подписаться
+            </a>
+        {% endif %}
+      {% endif %}
+    </li>
+  </ul>
   {% for post in page_obj %}
-    <article>
-      <br>
-      <div class="card">
-        <div class="card-header">
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}">
-          {% endthumbnail %}
-          <p>{{ post.text|linebreaksbr }}</p>
-          <a href="{% url 'posts:post_detail' post.pk %}" class="btn btn-secondary" type="button">Подробная информация </a>
-          {% if post.group %}
-            <a href="{% url 'posts:group_list' post.group.slug %}" class="btn btn-secondary" type="button">
-              Все записи группы</a>
-          {% endif %}
-        </div>
-      </div>
-    </article>
+    {% include 'posts/includes/post_list.html' %}
     <br>
   {% endfor %}
   {% include 'posts/includes/paginator.html' %}
 {% endblock %}
+
+
+
